--- a/AnaModules/CMakeLists.txt
+++ b/AnaModules/CMakeLists.txt
@@ -38,9 +38,9 @@ art_make(BASENAME_ONLY
 		     ${ART_FRAMEWORK_SERVICES_OPTIONAL}
 		     ${ART_FRAMEWORK_SERVICES_OPTIONAL_TFILESERVICE_SERVICE}
 	             ${ART_FRAMEWORK_SERVICES_OPTIONAL_RANDOMNUMBERGENERATOR_SERVICE}
-                     art_Persistency_Common canvas_Persistency_Common
-                     art_Persistency_Provenance canvas_Persistency_Provenance
-                     art_Utilities canvas_Utilities
+                     art_Persistency_Common
+                     art_Persistency_Provenance
+                     art_Utilities
 		     ${MF_MESSAGELOGGER}
 		     ${MF_UTILITIES}
 		     ${FHICLCPP}
