--- a/AnaModules/CMakeLists.txt
+++ b/AnaModules/CMakeLists.txt
@@ -6,7 +6,7 @@ art_make(BASENAME_ONLY
 	LIB_LIBRARIES 
 		     lardataobj_RecoBase
 		     lardataobj_AnalysisBase
-                     larcore_Geometry
+                     larcorealg_Geometry
 		     larcore_Geometry_Geometry_service
 		     lardata_Utilities
 		     ${SIMULATIONBASE}
@@ -27,7 +27,7 @@ art_make(BASENAME_ONLY
 		     lardataobj_RecoBase
 		     lardataobj_MCBase
                      lardataobj_AnalysisBase
-		     larcore_Geometry
+		     larcorealg_Geometry
 		     larcore_Geometry_Geometry_service
 		     lardata_Utilities
                      nusimdata_SimulationBase
